--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
       <a href="about.html">About</a>
     </nav>
+    <h1>NETLIFY FTW</h1>
     <div id="app"></div>
 
     <script type="module" src="/main.js"></script>
